--- a/index.html
+++ b/index.html
@@ -26,24 +26,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Dibujos</a>
+                <a class="nav-link active" aria-current="page" href="pinturas.html">Pinturas</a>
               </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Esculturas</a>
+            <a class="nav-link active" aria-current="page" href="esculturas.html">Esculturas</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Fotografias</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              otros
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Tatuadores</a></li>
-              <li><a class="dropdown-item" href="#">Stickers</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Contrataciones</a></li>
-            </ul>
           </li>
         </ul>
         <form class="d-flex" role="search">
