--- a/esculturas.html
+++ b/esculturas.html
@@ -94,7 +94,7 @@
         </div>
         <div class="card" style="width: 90%;">
           <div carta-pintura>
-          <img style="height: 265px;" src="img/religiosa.jpg.crdownload" class="card-img-top" alt="...">
+          <img style="height: 265px;" src="img/religiosa.jpg" class="card-img-top" alt="...">
           </div>
           <div class="card-body">
             <h5 class="card-title">Escultura</h5>
@@ -143,7 +143,6 @@
   </div>
 </div>
 </section>
-<!-- <script src="arte2.js">      </script> -->
 <script src="subastas.js"></script>
 </body>
 </html>
