--- a/esculturas.html
+++ b/esculturas.html
@@ -31,9 +31,7 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="esculturas.html">Esculturas</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Fotografias</a>
-          </li>
+      
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -43,106 +41,67 @@
     </div>
     </nav>
     <div class="titulos">
-        <h2>ESCULTURAS</h2>
+      <h2>MEJORES ESCULTURAS DE DICIEMBRE:</h2>
+  </div>
+  <div class="carta-columna">
+    <div class="card" style="width: 90%;">
+      <div carta-pintura>
+      <img style="height: 265px;" src="img/vendidas11.jpg" class="card-img-top" alt="...">
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Escultura</h5> 
+        <a  class="btn btn-primary botonCompra btnvendido">Vendido</a>
+      </div>
     </div>
-      <div class="carta-columna">
-        <div class="card" style="width: 90%;">
-            <div carta-pintura>
-            <img style="height: 265px;" src="img/ironman.jpg" class="card-img-top" alt="...">
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Escultura</h5>
-              <p class="card-text">Impresionante escultura de ironman </p>
-              <span class="precio">4.000.000$</span>  
-              <a href="#carrito" class="btn btn-primary botonCompra">Comprar</a>
-            </div>
-          </div>
-          <div class="card" style="width: 90%;">
-            <div carta-pintura>
-            <img style="height: 265px;" src="img/mujer.jpg" class="card-img-top" alt="...">
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Escultura</h5>
-              <p class="card-text">Impresionante escultura </p>
-              <span class="precio">3.000.000$</span>  
-              <a href="#carrito" class="btn btn-primary botonCompra">Comprar</a>
-            </div>
-          </div>
-          <div class="card" style="width: 90%;">
-            <div carta-pintura>
-            <img style="height: 265px;" src="img/tapado.jpg" class="card-img-top" alt="...">
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Escultura</h5>
-              <p class="card-text">Impresionante escultura  </p>
-              <span class="precio">100.000.000$</span>  
-              <a href="#carrito" class="btn btn-primary botonCompra">Comprar</a>
-            </div>
-          </div>
-    </div>
-    <div class="carta-columna">
       <div class="card" style="width: 90%;">
-          <div carta-pintura>
-          <img style="height: 265px;" src="img/esculturas1.jpg" class="card-img-top" alt="...">
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Escultura</h5>
-            <p class="card-text">Impresionante escultura </p>
-            <span class="precio">5.000.000$</span>  
-            <a href="#carrito" class="btn btn-primary botonCompra">Comprar</a>
-          </div>
+        <div carta-pintura>
+        <img style="height: 265px;" src="img/vendidas15.jpg" class="card-img-top" alt="...">
         </div>
-        <div class="card" style="width: 90%;">
-          <div carta-pintura>
-          <img style="height: 265px;" src="img/religiosa.jpg" class="card-img-top" alt="...">
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Escultura</h5>
-            <p class="card-text">Impresionante escultura religiosa </p>
-            <span class="precio">20.000.000$</span>  
-            <a href="#carrito" class="btn btn-primary botonCompra">Comprar</a>
-          </div>
+        <div class="card-body">
+          <h5 class="card-title">Escultura</h5> 
+          <a  class="btn btn-primary botonCompra btnvendido">Vendido</a>
         </div>
-        <div class="card" style="width: 90%;">
-          <div carta-pintura>
-          <img style="height: 265px;" src="img/tortuga.jpg" class="card-img-top" alt="...">
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Escultura</h5>
-            <p class="card-text">Impresionante escultura de tortuga</p>
-            <span class="precio">1.000.000$</span>  
-            <a href="#carrito" class="btn btn-primary botonCompra">Comprar</a>
-          </div>
+      </div>
+      <div class="card" style="width: 90%;">
+        <div carta-pintura>
+        <img style="height: 265px;" src="img/vendidas14.jpg" class="card-img-top" alt="...">
         </div>
-  </div>
-    <div>
+        <div class="card-body">
+          <h5 class="card-title">Escultura</h5> 
+          <a  class="btn btn-primary botonCompra btnvendido">Vendido</a>
+        </div>
+      </div>
+</div>
+<div class="carta-columna">
+  <div class="card" style="width: 90%;">
+    <div carta-pintura>
+    <img style="height: 265px;" src="img/vendidas14.jpg" class="card-img-top" alt="...">
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Escultura</h5> 
+      <a  class="btn btn-primary botonCompra btnvendido">Vendido</a>
     </div>
   </div>
-   </div>
-  </div>
-
-  <div class="container" id="carrito">
-    <h2>Carrito</h2>
-    <table class="table table-dark">
-      <thead>
-        <tr>          
-          <td></td>   
-          <td>Producto</td>
-          <td>Cantidad</td>
-          <td>Precio</td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-      </thead>
-      <tbody id="tbody">
-      
-      </tbody>
-    </table>
-
-  </div>
+    <div class="card" style="width: 90%;">
+      <div carta-pintura>
+      <img style="height: 265px;" src="img/vendidas11.jpg" class="card-img-top" alt="...">
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Escultura</h5> 
+        <a  class="btn btn-primary botonCompra btnvendido">Vendido</a>
+      </div>
+    </div>
+    <div class="card" style="width: 90%;">
+      <div carta-pintura>
+      <img style="height: 265px;" src="img/vendidas16.jpg" class="card-img-top" alt="...">
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Escultura</h5> 
+        <a  class="btn btn-primary botonCompra btnvendido">Vendido</a>
+      </div>
+    </div>
 </div>
 </section>
-<script src="subastas.js"></script>
+
 </body>
 </html>
