--- a/index.html
+++ b/index.html
@@ -27,13 +27,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="pinturas.html">Dibujos</a>
+                <a class="nav-link active" aria-current="page" href="pinturas.html">Pinturas</a>
               </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="esculturas.html">Esculturas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Fotografia</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
@@ -161,12 +158,12 @@
         <div class="carta-columna">
           <div class="card" style="width: 90%;">
               <div carta-pintura>
-              <img style="height: 265px;" src="img/leon.jpg" class="card-img-top" alt="...">
+              <img style="height: 265px;" src="img/tapado.jpg" class="card-img-top" alt="...">
               </div>
               <div class="card-body">
-                <h5 class="card-title">Pintura</h5>
-                <p class="card-text">Impresionante retrato de un leon </p>
-                <span class="precio">500000$</span>  
+                <h5 class="card-title">Escultura</h5>
+                <p class="card-text">Impresionante escultura </p>
+                <span class="precio">5000000$</span>  
                 <a href="#carrito" class="btn btn-primary botonCompra">Comprar</a>
               </div>
             </div>
@@ -183,11 +180,11 @@
             </div>
             <div class="card" style="width: 90%;">
               <div carta-pintura>
-              <img style="height: 265px;" src="img/jesus.jpg" class="card-img-top" alt="...">
+              <img style="height: 265px;" src="img/esculturas1.jpg" class="card-img-top" alt="...">
               </div>
               <div class="card-body">
-                <h5 class="card-title">Pintura</h5>
-                <p class="card-text">Impresionante retrato de jesus </p>
+                <h5 class="card-title">Escultura</h5>
+                <p class="card-text">Paloma levanta hombre </p>
                 <span class="precio">1000000$</span>  
                 <a href="#carrito" class="btn btn-primary botonCompra">Comprar</a>
               </div>
