--- a/pinturas.html
+++ b/pinturas.html
@@ -20,7 +20,7 @@
         </div>
       <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
-      <a class="navbar-brand" href="#">Arte para todos </a>
+      <a class="navbar-brand" href="index.html">Arte para todos </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
